2MIR-FP-main/Terraform/Fusion_ver_05/DEV_infra_ver01/modules/vpc/vpc.tf
#################### /modules/vpc/vpc.tf

### VPC, IGW

##### VPC 생성
resource "aws_vpc" "main" {
  cidr_block           = "172.16.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name    = "MIR_vpc"
    uptime  = "${var.uptime}"
  }
}

##### IGW 생성
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "MIR_igw"
  }
}
